hid email and phone elements as temporary stopgap to fix index mobile

--- a/css/index.css
+++ b/css/index.css
@@ -183,7 +183,7 @@ header {
 }
 
 .about-container {
-    height: 100%;
+    min-height: 75vh;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -346,6 +346,10 @@ section .copyright {
 
     .about {
     }
+
+    .about-container {
+        height: 100%;
+    }
     
     .about h2 {
     }
@@ -368,6 +372,11 @@ section .copyright {
     }
     
     .contacts {
+    }
+
+    #email,
+    #phone {
+        display: none;
     }
 
     /* footer section */
